<resources>
    <string name="app_name">GoCidade</string>
    <string name="facebook_app_id">2032683646984404</string>
    <string name="fb_login_protocol_scheme">fb2032683646984404</string>
    <string name="login_email">Email</string>
    <string name="login_senha">Senha</string>
    <string name="btn_login">Login</string>
    <string name="txt_signup">Não tem conta? Cadastre-se!</string>
    <string name="btn_signup">Cadastrar</string>
    <string name="msg_route">Traçando rota...</string>
    <string name="origin">Origem</string>
    <string name="msg_progress">Carregando...</string>
    <string name="error_gps">É necessário habilitar a configuração de localização para utilizar o aplicativo</string>
    <string name="address_list_title">Selecione o destino</string>
    <string name="local_error">Você deve Habilitar as permissões para utilizar o aplicativo!</string>
    <string name="search_title">Digite seu destino</string>
    <string name="btn_publish">Publicar</string>

    <string-array name="categories">
        <item>BURRACO</item>
        <item>ENTULHO</item>
        <item>ILUMINAÇÃO</item>
        <item>VAZAMENTO</item>
        <item>CALÇADA</item>
        <item>SINALIZAÇÃO</item>
        <item>OUTROS</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
